fix: replace gap to margin

--- a/src/features/home/components/Slider/Slider.module.scss
+++ b/src/features/home/components/Slider/Slider.module.scss
@@ -20,7 +20,10 @@
 .slide-header {
   display: flex;
   align-items: center;
-  gap: 8px;
+
+  svg, span {
+    margin-right: 8px;
+  }
 }
 
 .alcohol-location {
